<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/new_game"
        android:icon="@drawable/add"
        android:title="@string/new_game"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/difficulty"
        android:icon="@drawable/menu"
        android:title="@string/diff"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/easy"
                android:title="@string/easy"/>
            <item android:id="@+id/hard"
                android:title="@string/no"/>
            <item android:id="@+id/hardmas"
                android:title="@string/mal"/>
        </menu>
    </item>
    <item android:id="@+id/Exit"
        android:icon="@drawable/exit"
        android:title="@string/x"
        app:showAsAction="ifRoom|withText"
        />
</menu>